# myclaw

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  TEST_REPORT.md  config.example.yaml  start-backend.bat  start-frontend.bat  start.bat  start_all.bat  start_all.ps1  start_backend.bat  start_frontend.bat  test_features.py  test_single_model.py  test_thinking_api.py  启动说明.md
backend/: chat.db  chat.db-shm  chat.db-wal  config.example.yaml  pyproject.toml  requirements.txt  start_server.py  test_sse.py  test_stream.py
backend/app/: __init__.py  config.py  embedding_service.py  llm_service.py  main.py  memory_flush_service.py  memory_summarizer.py  models.py  schemas.py  sqlite_vec_service.py  vector_search_service.py
backend/app/agent/: __init__.py  embedding.py  llm.py  session.py  tools.py
backend/app/agent_loop/: __init__.py  controller.py  prompting.py  types.py
backend/app/api/: __init__.py  agent_runs.py  automations.py  channels.py  chat.py  config.py  gateway_ws.py  history.py  logs.py  mcp.py  memory.py  rules.py  sessions.py  skills.py  tools.py
backend/app/channels/: __init__.py  base.py  gateway.py  manager.py  qq.py  registry.py  web.py  wechat.py  ws_handler.py
backend/app/common/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  (+2 more)
backend/migrations/: __init__.py  run_migration.py
backend/tests/: test_agent_loop_prompting.py  test_automation_service.py  test_config_masking.py  test_mcp_service.py  test_memory_api.py  test_security.py  test_session_service.py  test_time_tool.py  test_tool_executor.py
(+215 files in other folders)
