[project]
name = "myclaw"
version = "0.1.0"
description = "极简 AI 助手 - 面向个人用户的微信 AI 机器人"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.1",
    "duckduckgo-search>=4.1.0",
    "zhipuai>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
